--- a/src/views/notFound.html
+++ b/src/views/notFound.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>Not found</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
     <body>
-        <h1>Path <%= path %> not found</h1>
+        <img src="css/imgs/mother_of_god.jpg" style="float:left;"/>
+        <h1 class="no_found_title">WHERE HAVE YOU GOT THIS STRANGE PATH : '<%= path %>' ?</h1><br />
     </body>
 </html>
