--- a/src/views/notFound.html
+++ b/src/views/notFound.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="css/main.css" />
     </head>
     <body>
-        <img src="css/imgs/mother_of_god.jpg" style="float:left;"/>
+        <img src="css/imgs/mother-of-god.jpg" style="float:left;"/>
         <h1 class="no_found_title">WHERE HAVE YOU GOT THIS STRANGE PATH : '<%= path %>' ?</h1><br />
     </body>
 </html>
