Added ClickTale integration
Added ClickTale integration

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -33,6 +33,12 @@
 </head>
 <body>
 
+    <!-- ClickTale Top part -->
+    <script type="text/javascript">
+        var WRInitTime=(new Date()).getTime();
+    </script>
+    <!-- ClickTale end of Top part -->
+
     <div id="info_global_message" class="info global_message">
     </div>
 
@@ -550,5 +556,11 @@
         </div>
     </div>
 
+    <!-- ClickTale Top part -->
+    <script type="text/javascript">
+        var WRInitTime=(new Date()).getTime();
+    </script>
+    <!-- ClickTale end of Top part -->
+    
 </body>
 </html>
