--- a/src/views/main.html
+++ b/src/views/main.html
@@ -556,11 +556,21 @@
         </div>
     </div>
 
-    <!-- ClickTale Top part -->
+    <!-- ClickTale Bottom part -->
+    <div id="ClickTaleDiv" style="display: none;"></div>
+    
     <script type="text/javascript">
-        var WRInitTime=(new Date()).getTime();
+        window.ClickTaleScriptSource = 'http://cdn.clicktale.net/www/';
+        if(document.location.protocol != 'https:'){
+            document.write(unescape("%3Cscript%20src='" + window.ClickTaleScriptSource + "WRe0.js'%20type='text/javascript'%3E%3C/script%3E"));
+        }
     </script>
-    <!-- ClickTale end of Top part -->
+    
+    <script type="text/javascript">
+    
+        if(typeof ClickTale=='function')  ClickTale(9746, 1, "www08");
+    </script>
+    <!-- ClickTale end of Bottom part -->
     
 </body>
 </html>
