Added ClickTale comment
Added ClickTale comment

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -33,7 +33,10 @@
 </head>
 <body>
 
-    <!-- ClickTale Top part -->
+    <!-- 
+        ClickTale test integration to check basic working examples of the specified tool;
+        ClickTale Top part 
+    -->
     <script type="text/javascript">
         var WRInitTime=(new Date()).getTime();
     </script>
